# lisa

./: .gitignore  LICENSE  README.md  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md  installation.md  quickstart.md
examples/: creation_input_parameter_file.py  creation_of_posterior.py  fit_gp_rvs.py  fit_gp_rvsdai.py  fit_gp_rvsquasinorwn2.py  fitrv1.py  fitrv1.py~  frompickle.py  resfreefit1.txt  script_chainanalysis.py  script_mcmcexploration.py  test_conversion.py  usage_datainterface_classes.py
lisa/: __init__.py
ocode/: Everything for planet b.py  Final fight.py  Generate paper graphs.py  LCdata.txt  Planet c .py  Total light curve analysis.py  correct_time.py  overlapping transits.py  radial velocity data set from paper.txt  transits for b.txt  transits for c.txt
olivier/: study_prior_speed.py  test_speed_convert.py
scode/: MCMC_v2.py
script_analysis/: script_chainanalysis.py  script_customLCplot.py  script_customRVplot.py  script_mcmcexploration.py
script_and_functions/: Format_CHEOPS_4_lisa.ipynb  chain_analysis_Emcee.ipynb  pickle_datfiles.py  plot_chains.py  script_EmceeExploration.py  script_LCPhasefolded_alldatasetsinoneplot.py  script_RVPhasefolded_alldatasetsinoneplot.py  script_RValldatasetsinoneplot_and_GLS.py  script_chainanalysis.py  script_chainanalysis_Emcee.py  script_customLCplot.py  script_customRVplot.py  script_mcmcexploration.py  script_plot_IND_TSNGLSP.py  script_plot_LC_PF.py  script_plot_LC_PF_modeldisp.py  script_plot_LC_TS.py  script_plot_LC_TSNGLSP.py  script_plot_LC_TS_instvar.py  (+13 more)
(+530 files in other folders)
